[package]
name = "chat-example"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"
env_logger = "0.10"
futures = "0.3"
anyhow = "1.0"

libp2p = { version = "0.52", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
