[package]
name = "gossipbox"
version = "0.1.0"
authors = ["heng30.xyz"]
edition = "2021"
build = "build.rs"
description = "gossipbox for local chat"
license = "MIT"
categories= ["Gossip",  "Slint", "libp2p"]
keywords= ["Cossip",  "Slint", "Rust", "libp2p"]

[dependencies]
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
rusqlite = "0.27"
clipboard = "0.5"
anyhow = "1.0"
platform-dirs = "0.3"
async-trait = "0.1"
futures = "0.3"

slint = { version = "1.2", features = ["log"] }
uuid = { version = "1.3", features = ["v4"] }
tokio = {version = "1.32", features = ["full"]}
libp2p = { version = "0.52", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }

[build-dependencies]
slint-build = "1.2"
cmd_lib = "1.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.3"
